# yolo26_app

./: .gitignore  CODE_WIKI.md  LICENSE  README.md  README_EN.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
yolo26_app/core/: annotation_canvas.py  auto_annotator.py  config.py  gpu_detector.py  label_manager.py  predictor.py  project_manager.py  realsense_camera.py  task_manager.py  trainer.py  yolo_exporter.py
yolo26_app/ui/: annotate_widget.py  main_window.py  styles.py  test_widget.py  train_widget.py
